<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/im"
        android:layout_width="156dp"
        android:layout_height="150dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tvU"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="187dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txUsu"
        app:layout_constraintBottom_toTopOf="@+id/Usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im" />

    <EditText
        android:id="@+id/Usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/tvUsuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tvPas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvU" />

    <TextView
        android:id="@+id/tvPas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txPas"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Usuario" />

    <Button
        android:id="@+id/btnIngreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="68dp"
        android:text="@string/btnIngresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/tvPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnIngreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPas" />

</androidx.constraintlayout.widget.ConstraintLayout>